<resources>
  <string name="app_name">Ben</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_tache">Tâches</string>
  <string name="title_calendar">Calendrier</string>
  <string name="title_notification">Notifications</string>
  <string name="title_profil">Profil</string>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
